<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
            android:id="@+id/navigation_feed"
            android:name="com.kinotech.kinotechappv1.ui.feed.FeedFragment"
            android:label="@string/title_feed"
            tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kinotech.kinotechappv1.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kinotech.kinotechappv1.ui.lists.ListsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_lists" />

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.kinotech.kinotechappv1.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" />
</navigation>