<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment"
        android:id="@+id/profile_lay"
        android:background="@color/red_400">

    <TextView
            android:id="@+id/friend_textProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/profile_name_string"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/friend_photo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp" />

    <TextView
            android:id="@+id/friend_lists"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/playlists_string"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textSize="12sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
            app:layout_constraintLeft_toLeftOf="@id/friend_textProfile"
            app:layout_constraintRight_toLeftOf="@+id/friend_subscribers"
            tools:ignore="SmallSp" />

    <TextView
            android:id="@+id/friend_subscribers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/subscribers_string"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textSize="12sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
            app:layout_constraintLeft_toRightOf="@id/friend_lists"
            app:layout_constraintRight_toLeftOf="@+id/friend_subscriptions"
            tools:ignore="SmallSp" />

    <TextView
            android:id="@+id/friend_subscriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/subscriptions_string"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textSize="12sp"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
            app:layout_constraintLeft_toRightOf="@id/friend_subscribers"
            app:layout_constraintRight_toRightOf="@id/friend_textProfile"
            tools:ignore="SmallSp" />

    <ImageView
            android:id="@+id/friend_photo"
            android:layout_width="124dp"
            android:layout_height="124dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/subscribeButton"
            app:layout_constraintEnd_toEndOf="@id/subscribeButton"
            android:layout_marginTop="30dp"
            android:foreground="@drawable/photo"
            tools:ignore="ContentDescription" />

    <ImageView
            android:id="@+id/dashed"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/dashed_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="226dp"
            tools:ignore="ContentDescription" />
    <ImageButton
            android:id="@+id/backBtnCh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subscribeButton"
            android:layout_width="171dp"
            android:layout_height="25dp"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/subscribe_string"
            android:background="@drawable/subscribe"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="175dp"
            android:layout_marginStart="7dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friend_listsRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/open_list_film"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/dashed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/show_all"
            app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_all"
            android:layout_width="115dp"
            android:layout_height="25dp"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/show_all_string"
            android:background="@drawable/subscribe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="55dp" />

</androidx.constraintlayout.widget.ConstraintLayout>