<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ChangeProfileFragment"
        android:id="@+id/change_profile_lay"
        android:background="@color/red_400">

    <ImageView
            android:id="@+id/changePhoto"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/changePhotoButton"
            android:foreground="@drawable/rounded_fg"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePhotoButton"
            android:layout_width="214dp"
            android:layout_height="20dp"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/change_photo_string"
            android:background="@drawable/subscribe"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="248dp" />

    <EditText
            android:id="@+id/change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="15"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="368dp"
            android:hint="@string/change_name_string"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="124dp"
            android:layout_height="35dp"
            android:textColor="@color/white_full"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textAlignment="center"
            android:text="@string/save_string"
            android:background="@drawable/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="588dp" />

</androidx.constraintlayout.widget.ConstraintLayout>