<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_50">

    <TextView
            android:id="@+id/dia_text"
            android:text="@string/enter_list_name"
            android:textColor="@color/white_text"
            android:fontFamily="@font/rubik_bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintBottom_toTopOf="@+id/editTextList" />

    <EditText
            android:id="@+id/editTextList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="15"
            android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/dia_text"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintBottom_toTopOf="@+id/create_list"
            tools:ignore="Autofill,LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_list"
            android:fontFamily="@font/rubik_bold"
            card_view:layout_constraintTop_toBottomOf="@+id/editTextList"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cancel_list"
            card_view:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_list"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            card_view:layout_constraintTop_toBottomOf="@+id/editTextList"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintEnd_toStartOf="@+id/create_list"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            card_view:layout_constraintGuide_begin="205dp"
            android:orientation="vertical" />
</androidx.constraintlayout.widget.ConstraintLayout>